assets/css/styles.css
/* All of my pages' stuff */

@import url("/navbar/navbar.css");
@import url("/footer/footer.css");

@include media-breakpoint-up(md);

/* All of Katie's pages stuff */
h1 {
  margin-top: 3rem !important;
  margin-bottom: 3rem !important;
  font-family: Montserrat, sans-serif;
  font-size: 64px;
  text-align: center;
  line-height: 78px;
}


@media (min-width: 768px) {
  #press-content-container h1 {
    margin-bottom: -1rem;
  }
}

h2 {
  font-family: Montserrat, sans-serif;
  font-size: 55px;
  text-align: center;
  line-height: 78px;
  margin: 60px 0px;
}

h3 {
  font-size: 36px;
  font-family: Montserrat, sans-serif;
}

#get-involved-content-container .btn, #press-content-container .btn {
  font-family: 'Open Sans',sans-serif;
  color: white;
  background: #33CCCC;
  border-color: #33CCCC;
  border-radius: 25px;
  padding-bottom: 10px;
  width: fit-content;
}

#get-involved-content-container .btn:hover, #press-content-container .btn:hover {
  color: white;
}

/* Press page stuff */

#press-content-container {
  margin: 0px 28px 100px 28px;
}

.press-card {
  padding: 16px 40px;
}

#press-content-container h3 {
	margin: 16px 20px 0px;
}

.press-card-organization {
  font-weight: bold;
  font-size: 22px;
  font-family: Montserrat;
  color: #33CCCC;
  padding-top: 8px;
}

.press-card hr {
  border: 1px solid #FFCC00;
}

.press-card-title {
  font-size: 22px;
  font-family: Open Sans;
  font-style: italic;
  color: black;
}

.press-card-date {
  font-size: 18px;
  font-family: Open Sans;
}

.filler-card {
  visibility: hidden;
}

/* Get Involved page stuff */
#get-involved-content-container {
  margin: 0px 0px 50px 0px;
}
  
.get-involved-row{
  margin-bottom: 60px;
} 

#get-involved-content-container img {
  width: 250px;
  padding-bottom: 10px;
}

#get-involved-content-container p {
  font-size: 22px;
  font-family: 'Open Sans', sans-serif;
  margin: 0px;
}

#get-involved-content-container .btn-div {
  padding-top: 10px;
}

#upcoming {
  background: #FFCC00;
}

#upcoming p {
  font-size: 22px;
  font-family: 'Open Sans', sans-serif;
  margin: 60px 0px;
}

/* Events page stuff */

#events-content-container {
  margin: 0px 28px 100px 28px;
}

#main-img-row {
  /* padding: 1rem, 0rem, 2rem, 0rem; */
  padding-bottom: 1rem;
  /* justify-content: center; */
  align-items: center;
}

#main-img {
  /* flex-direction: row; */
  align-self: center;
}

#events-content-container h2 {
  text-align: left;
}

#events-content-container .row {
  flex-direction: column;
}

.events-card {
  /* display: flex; */
  /* justify-content: start; */
  margin: 16px 40px;
  font-size: 18px;
  font-family: 'Open Sans';
}

#events-content-container .btn, #press-content-container .btn {
  font-family: 'Open Sans',sans-serif;
  color: white;
  background: #33CCCC;
  border-color: #33CCCC;
  border-radius: 25px;
  padding-bottom: 10px;
  width: fit-content;
}

#events-content-container .btn:hover, #press-content-container .btn:hover {
  color: white;
}

/* .event-card-btn {
  font-family: 'Open Sans', sans-serif;
  background: #33CCCC;
  border-radius: 25px;
  border-color: #33CCCC;
  font-size: 16px;
} */

.img-col {
  display: flex;
  align-items: center;
  /* justify-content: center; */
  width: auto;
}

/* temp img size */
#events-content-container img { 
  max-width: 50%; /* need to figure out sizing better */
  height: auto;
  padding-bottom: 10px;
}

#events-content-container hr {
  border: 1px solid #FFCC00;
  margin-top: 1rem;
  margin-bottom: 3rem;
}

